Elaboración de la barra lateral.

--- a/app/templates/main/home.html
+++ b/app/templates/main/home.html
@@ -26,6 +26,7 @@
             height: 100%;
             width: 5%;
             margin-top: -20px;
+            background-color: #250700;
         }
         .navbar li:hover{
             color: black;
@@ -68,7 +69,7 @@
                 {{message}}
             </div>
         {% endfor %}
-        <nav class="navbar" id="side_bar">
+        <nav  id="side_bar">
             <ul class="nav">
                 <li class="active"><a href="#"><img src="{{ url_for('static', filename='IMG/maquina-de-tatuaje.png') }}" alt="tatto" height="40px"></a></li>
                 <li ><a href="#"><img src="{{ url_for('static', filename='IMG/skateboard.png') }}" alt="tatto" height="40px"></a></li>
